Testing for fix of the flickering issue

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -64,6 +64,7 @@ body {
   width: 100%;
   color: #656565;
   font-family: $poppins-font;
+  display: none;
   overflow-y: auto;
   overflow-x: hidden !important;
 }
